--- a/.github/workflows/save_remote.yml
+++ b/.github/workflows/save_remote.yml
@@ -27,4 +27,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        branch: 'save_devel'
+        branch: 'save_firmware'
