--- a/.github/workflows/save_remote.yml
+++ b/.github/workflows/save_remote.yml
@@ -21,3 +21,7 @@ jobs:
       with:
        repository: arendst/Tasmota-firmware
        path: main
+    - name: Save firmware in this repo
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+       commit_message: Stubs updated
